# ilp-based-task-allocation

./: .gitignore  README.md
src/fleet_manager/: package.xml
src/fleet_manager/fleet_manager/: fleet_manager.py
src/robot_interfaces/: CMakeLists.txt
src/robot_interfaces/action/: ProcessOrder.action
src/robot_navigation/params/: nav2_params.yaml
src/shared_memory_node/shared_memory_node/: shared_memory_node.py
src/simulation_env/: setup.py
src/simulation_env/launch/: sim_with_nav.launch.py  warehouse_manager.launch.py
src/simulation_env/simulation_env/: battery_sim_node.py
src/task_management/: learned_rules.pl  setup.py
src/task_management/ilp_learning/: bias.pl  bk.pl  exs.pl  generate_ilp_data.py  run_ilp.py  test_ilp_pipeline.sh
src/task_management/scripts/: test_allocator_standalone.py  train_ilp_model.sh
src/task_management/task_management/: allocation_strategy.py  generate_prolog.py  ilp_dataset_2026-01-21_23-37-59.csv  ilp_dataset_logger.py  random_order_generator.py  task_manager.py  warehouse_training_data.csv
src/task_management/task_management/popper_data/: bias.pl  bk.pl  exs.pl
src/task_management/test/: test_ilp_runtime.py  test_new_ilp.py  verify_busy_assignment.py  verify_load_balancing.py
src/web_server/: package.xml  setup.cfg  setup.py
src/web_server/templates/: index.html
src/web_server/web_server/: __init__.py  server_node.py
