<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_server</name>
  <version>1.0.0</version>
  <description>Flask-based web interface for warehouse control and order management</description>
  <maintainer email="ujjwal@hbrs.de">Ujjwal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>robot_interfaces</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
